// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditTitleBar renders correctly 1`] = `
<section
  className="section"
>
  <div
    className="titleDescription"
  >
    <InputField
      className="title"
      dataTest="dhis2-dashboard-dashboard-title-input"
      label="Dashboard title"
      name="Dashboard title input"
      onChange={[Function]}
      placeholder="Untitled dashboard"
      type="text"
      value="Rainbow Dash"
    />
    <TextAreaField
      className="description"
      dataTest="dhis2-dashboard-dashboard-description-input"
      label="Dashboard description"
      name="Dashboard description input"
      onChange={[Function]}
      resize="vertical"
      rows={4}
      value="The blue one"
      width="100%"
    />
  </div>
  <div
    className="itemSelector"
  >
    <ItemSelector />
  </div>
</section>
`;

exports[`EditTitleBar renders correctly when no name 1`] = `
<section
  className="section"
>
  <div
    className="titleDescription"
  >
    <InputField
      className="title"
      dataTest="dhis2-dashboard-dashboard-title-input"
      label="Dashboard title"
      name="Dashboard title input"
      onChange={[Function]}
      placeholder="Untitled dashboard"
      type="text"
      value=""
    />
    <TextAreaField
      className="description"
      dataTest="dhis2-dashboard-dashboard-description-input"
      label="Dashboard description"
      name="Dashboard description input"
      onChange={[Function]}
      resize="vertical"
      rows={4}
      value="The blue one"
      width="100%"
    />
  </div>
  <div
    className="itemSelector"
  >
    <ItemSelector />
  </div>
</section>
`;
